[gd_scene load_steps=8 format=2]

[ext_resource path="res://platformer/MockTiles.tres" type="TileSet" id=1]
[ext_resource path="res://platformer/Door.gd" type="Script" id=2]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 0.284485, 0.518527, 0.921875, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=2]

flags = 4
gradient = SubResource( 1 )
width = 512

[sub_resource type="SegmentShape2D" id=4]

custom_solver_bias = 0.0
a = Vector2( -18.6989, 183.441 )
b = Vector2( -19.3866, -453.44 )

[sub_resource type="SegmentShape2D" id=5]

custom_solver_bias = 0.0
a = Vector2( 1150.9, 3.37074 )
b = Vector2( 0, 10 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 10, 58.408 )

[node name="Level" type="Node2D"]

editor/display_folded = true
position = Vector2( 127.291, 178.408 )
_sections_unfolded = [ "Transform" ]

[node name="LevelContainer" type="StaticBody2D" parent="." index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Polygon2D" type="Polygon2D" parent="LevelContainer" index="0"]

polygon = PoolVector2Array( 0, 0, 1152, 0, 1152, 640, 0, 640 )
uv = PoolVector2Array(  )
color = Color( 0.953125, 0.930786, 0.930786, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = SubResource( 2 )
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = -90.0
invert_enable = false
invert_border = 100.0
_sections_unfolded = [ "Material", "Texture", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Line2D" type="Line2D" parent="LevelContainer" index="1"]

points = PoolVector2Array( 1152, 0, 1152, 640, 0, 640, 0, 0, 1152, 0 )
width = 10.0
default_color = Color( 0.882812, 0.882812, 0.882812, 1 )
texture_mode = -1110917834
sharp_limit = 2.0
round_precision = 8
_sections_unfolded = [ "Border", "Capping", "Fill" ]
__meta__ = {
"_edit_lock_": true
}

[node name="LeftEdge" type="CollisionShape2D" parent="LevelContainer" index="2"]

position = Vector2( 19.0955, 458.032 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="RightEdge" type="CollisionShape2D" parent="LevelContainer" index="3"]

position = Vector2( 1169.45, 460.082 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="TopEdge" type="CollisionShape2D" parent="LevelContainer" index="4"]

shape = SubResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="BottomEdge" type="CollisionShape2D" parent="LevelContainer" index="5"]

position = Vector2( 1.52588e-05, 632.999 )
shape = SubResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="TileMap" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 1 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 196615, 0, 196608, 196616, 0, 131076, 196617, 0, 196610, 262152, 0, 131077, 458767, 0, 1, 458768, 0, 65536, 458769, 0, 2, 524293, 0, 5, 524303, 0, 131073, 524304, 0, 196619, 524305, 0, 131074, 589824, 0, 196608, 589825, 0, 196609, 589826, 0, 196609, 589827, 0, 196609, 589828, 0, 196609, 589829, 0, 196611, 589830, 0, 196609, 589831, 0, 196609, 589832, 0, 196609, 589833, 0, 196609, 589834, 0, 196609, 589835, 0, 196609, 589836, 0, 196609, 589837, 0, 196609, 589838, 0, 196609, 589839, 0, 65544, 589840, 0, 131072, 589841, 0, 65538 )
_sections_unfolded = [ "Collision", "Occluder" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Door" type="Area2D" parent="." index="2"]

position = Vector2( -0.463547, 581.104 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door" index="0"]

position = Vector2( 0, -60 )
shape = SubResource( 6 )
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="Door" to="Door" method="on_player_enter"]

[connection signal="body_exited" from="Door" to="Door" method="on_player_leave"]


